--- a/package.json
+++ b/package.json
@@ -1,28 +1,37 @@
 {
-  "name": "react-app",
+  "name": "threejs-learning",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@react-three/drei": "^9.88.7",
-    "@react-three/fiber": "^8.15.17",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-simple-maps": "^3.0.0",
-    "stats.js": "^0.17.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
+    "@react-three/gltfjsx": "^4.3.4",
+    "@vnedyalk0v/react19-simple-maps": "^1.2.0",
+    "gltf-pipeline": "^4.3.0",
+    "leaflet": "^1.9.4",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "styled-components": "^6.1.19",
-    "three": "^0.160.0"
+    "three": "^0.181.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "vite": "^7.2.4"
   }
 }
